--- a/kevinttest.ipynb
+++ b/kevinttest.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kevin\n"
+      "dolomite is abeed\n"
      ]
     }
    ],
    "source": [
-    "print(\"kevin\")"
+    "print(\"dolomite is abeed\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 32-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -34,12 +34,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a2eff8961b1b6cfd824cdc967f27eac2b537e0b132754a46e9a297619be9420c"
+    "hash": "bd5508c2ffc7f17f7d31cf4086cc872f89e96996a08987e995649e5fbe85a3a4"
    }
   }
  },
